post control alignment fix

--- a/assets/stylesheets/solutions.scss
+++ b/assets/stylesheets/solutions.scss
@@ -5,9 +5,8 @@
 .post-controls .accepted-text {
   display: inline-block;
   font-size: inherit;
-  vertical-align: middle;
-  line-height: 35px;
-  margin-right: -5px;
+  line-height: 1;
+  margin-right: -3px;
   z-index: 999;
 }
 
